랜덤 닉네임 생성 로직 수정